...
//

import UIKit
import CropViewController
import SDWebImage

/// CropViewController with custom colors for 'Cancel' and 'Done' buttons.
class CustomCropViewController: CropViewController {

    public var buttonColor: UIColor = .primary {
        didSet {
            toolbar.cancelTextButton.setTitleColor(buttonColor, for: .normal)
            toolbar.doneTextButton.setTitleColor(buttonColor, for: .normal)
...
        }

        backgroundImageViewAlphaToken = backgroundImageView.observe(\.alpha, options: .new) { (imageView, change) in
            // keep the alpha at 0
            guard let newValue = change.newValue, newValue == 0 else {
                imageView.alpha = 0
                return
            }
        }
    }

    override func viewDidLayoutSubviews() {
        super.viewDidLayoutSubviews()
...
