...
        return input
    }()

    lazy var sendEmailButton: NotifireButton = {
        let button = NotifireButton()
        button.isEnabled = false
        button.setTitle("Continue", for: .normal)
        button.onProperTap = { [unowned self] _ in
            self.viewModel.sendResetPasswordEmail()
        }
        return button
    }()

...
